2010-05-11  JMB  Assorted bugfixes, formatting code cleanup, better Mac dmg

    Fixed a bug in opening PortaBase files from the command line.  That bug
    also broke opening files with a double-click on Windows and Linux, so that
    should work again.

    The recently used files list now ensures that the last opened file is at
    the top of the list, not just in it.  Also made sure that files opened from
    the command line or drag & drop get included in the list.
    
    Made the height of string input fields more consistent.  Moved more data
    field formatting and parsing code to the new Formatting class.  Made some
    minor enhancements to the Mac installer disk image build script.

2010-05-10  JMB  Number formatting improvements, usability tweaks, Czech update

    Overhauled the formatting and parsing of decimal values so that they should
    look correct in most locales, without actually changing what's stored in
    the file (internally, US English number formatting is always used).  This
    had some side benefits, like being able to enter percentages and have them
    used correctly in calculations.  CSV import/export still assumes US English
    formatting, I'll try to fix that as part of a larger CSV import overhaul in
    version 2.1.
    
    Changed the date dialog so that clicking "Today" or clicking (or selecting
    with the "Enter" or "Return" keys) a day will immediately select the date
    and close the dialog.  Changed the default decimal default value in the
    column editor from "0" to "0.0" so as to make it easier to distinguish from
    integer fields.  Updated the Czech UI translation and added a Czech help
    file translation (both from 1.9; the 2.0 versions are being worked on).

2010-05-07  JMB  XML & MobileDB import fixed, integer field validation fixed

    Fixed a couple of bugs that were preventing XML and MobileDB import from
    working.  Also fixed a bug where entering a decimal value into an integer